--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -29,7 +29,7 @@
                 class="welcome-body_section_1_0"
                 style="display: none"
         >
-            <section data-id="0">
+            <section data-id="1">
                 <slot name="welcome-section_1_0"></slot>
             </section>
 
@@ -40,7 +40,7 @@
                 class="welcome-body_section_2_0"
                 style="display: none"
         >
-            <section data-id="0">
+            <section data-id="2">
                 <slot name="welcome-section_2_0"></slot>
             </section>
         </div>
@@ -50,7 +50,7 @@
                 class="welcome-body_section_3_0"
                 style="display: none"
         >
-            <section data-id="0">
+            <section data-id="3">
                 <slot name="welcome-section_3_0"></slot>
             </section>
         </div>
@@ -460,7 +460,7 @@
             <div class='hasAnimation section_content_item_2'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>Мы занимаемся</p>
+                    <p class='section_content_header_p'>Единая цифровая платформа</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body section_content_body_2'>
@@ -529,10 +529,31 @@
         </div>
     </welcome-section>
 
-
     <welcome-section
             data-css-shadow="section"
             data-id="1_2"
+            slot="welcome-section_1_0"
+    >
+        <div class='section_content'>
+            <div class='hasAnimation section_content_item_0'>
+                <div class='section_content_header'>
+                    <p class='section_content_header_p_left'></p>
+                    <p class='section_content_header_p'>наши проекты</p>
+                    <p class='section_content_header_p_right'></p>
+                </div>
+                <div class='section_content_body'>
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
+                    </p>
+                </div>
+            </div>
+            <div class='section_content_item_img_1_2'></div>
+        </div>
+    </welcome-section>
+
+    <welcome-section
+            data-css-shadow="section"
+            data-id="1_3"
             slot="welcome-section_1_0"
     >
         <div class='section_content'>
@@ -609,9 +630,99 @@
                     </div>
                 </div>
             </div>
-            <div class='section_content_item_img_1_2'></div>
+            <div class='section_content_item_img_1_3'></div>
         </div>
     </welcome-section>
+
+
+    <welcome-section
+            data-css-shadow="section"
+            data-id="1_4"
+            slot="welcome-section_1_0"
+    >
+        <div class='section_content'>
+            <div class='hasAnimation section_content_item_0'>
+                <div class='section_content_header'>
+                    <p class='section_content_header_p_left'></p>
+                    <p class='section_content_header_p'>график работы</p>
+                    <p class='section_content_header_p_right'></p>
+                </div>
+                <div class='section_content_body'>
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
+                    </p>
+                </div>
+            </div>
+            <div class='section_content_item_img_1_4'></div>
+        </div>
+    </welcome-section>
+
+    <welcome-section
+            data-css-shadow="section"
+            data-id="1_5"
+            slot="welcome-section_1_0"
+    >
+        <div class='section_content'>
+            <div class='hasAnimation section_content_item_0'>
+                <div class='section_content_header'>
+                    <p class='section_content_header_p_left'></p>
+                    <p class='section_content_header_p'>Дресс-код</p>
+                    <p class='section_content_header_p_right'></p>
+                </div>
+                <div class='section_content_body'>
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
+                    </p>
+                </div>
+            </div>
+            <div class='section_content_item_img_1_5'></div>
+        </div>
+    </welcome-section>
+
+    <welcome-section
+            data-css-shadow="section"
+            data-id="1_6"
+            slot="welcome-section_1_0"
+    >
+        <div class='section_content'>
+            <div class='hasAnimation section_content_item_0'>
+                <div class='section_content_header'>
+                    <p class='section_content_header_p_left'></p>
+                    <p class='section_content_header_p'>зарплата и отпуск</p>
+                    <p class='section_content_header_p_right'></p>
+                </div>
+                <div class='section_content_body'>
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
+                    </p>
+                </div>
+            </div>
+            <div class='section_content_item_img_1_6'></div>
+        </div>
+    </welcome-section>
+
+    <welcome-section
+            data-css-shadow="section"
+            data-id="1_7"
+            slot="welcome-section_1_0"
+    >
+        <div class='section_content'>
+            <div class='hasAnimation section_content_item_0'>
+                <div class='section_content_header'>
+                    <p class='section_content_header_p_left'></p>
+                    <p class='section_content_header_p'>корпоративные преимущества</p>
+                    <p class='section_content_header_p_right'></p>
+                </div>
+                <div class='section_content_body'>
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
+                    </p>
+                </div>
+            </div>
+            <div class='section_content_item_img_1_7'></div>
+        </div>
+    </welcome-section>
+
 
     <welcome-section
             data-css-shadow="section"
@@ -619,20 +730,15 @@
             slot="welcome-section_2_0"
     >
         <div class='section_content'>
-            <div class=' hasAnimation section_content_item_0'>
+            <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>Обращение к коллегам</p>
+                    <p class='section_content_header_p'>внутренняя коммуникация</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='section_content_body_p'>
-                        Не нужно стесняться спрашивать и обращаться за помощью к коллегам. Большая часть сотрудников
-                        обращается друг к другу по имени и на "ты", а к руководителям - и на "вы", и на "ты". Лучший
-                        способ что-то выяснить – подойти и поговорить. Мы уважительно относимся друг к другу, поэтому
-                        разговариваем вежливо. Не требуем, не приказываем (в том числе и подчиненным), а просим,
-                        рекомендуем и предлагаем. В кабинетах и openspace – мы разговариваем не громко и стараемся не
-                        мешать коллегам.
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
                     </p>
                 </div>
             </div>
@@ -649,15 +755,12 @@
             <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>Лого, официальные, бланки, реквизиты</p>
+                    <p class='section_content_header_p'>Программа рекомендаций</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='section_content_body_p'>
-                        В компании есть официальный логотип, бланки для документов, реквизиты компании.
-                    </p>
-                    <p class="link">
-                        Документы доступны для скачивания только пользователям домена.
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
                     </p>
                 </div>
             </div>
@@ -674,19 +777,12 @@
             <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>Программа рекомендаций</p>
+                    <p class='section_content_header_p'>Корпоративные праздники</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='section_content_body_p'>
-                        Сотрудники нашей компании готовы рекомендовать работу в Цифромеде своим друзьям и знакомым.
-                        Теперь ты тоже можешь это сделать. Активные вакансии можно найти на нашей странице HH.ru
-                    </p>
-                    <p class="link">
-                        https://hh.ru/employer/4333633?hhtmFrom=vacancy.
-                    </p>
-                    <p class='section_content_body_p'>
-                        Смело отправляй их своим друзьям, либо присылай резюме в HR 😊
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
                     </p>
                 </div>
             </div>
@@ -704,14 +800,12 @@
             <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>Почта</p>
+                    <p class='section_content_header_p'>ресурсы и оборудование</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='section_content_body_p'>
-                        В компании корпоративная почта является одним из важнейших инструментов внутренней коммуникации.
-                        С ее помощью мы общаемся с коллегами и партнерам, получаем важные рассылки и организовываем
-                        встречи. Не пропусти важные рассылки!😉
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
                     </p>
                 </div>
             </div>
@@ -729,42 +823,16 @@
             <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>Принтер и сканер</p>
+                    <p class='section_content_header_p'>ПРОПУСКНАЯ СИСТЕМА</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='section_content_body_p'>
-                        По умолчанию к рабочему месту нового сотрудника подключено ближайшее МФУ. Для подключения к
-                        другим принтерам необходимо обратиться в тех. поддержку help@digitalms.ru
+                    <p class='section_content_body_p  notFound has-animation'>
+                        РАЗДЕЛ в разработке
                     </p>
                 </div>
             </div>
             <div class='section_content_item_img_3_1'></div>
-        </div>
-    </welcome-section>
-
-
-    <welcome-section
-            data-css-shadow="section"
-            data-id="3_2"
-            slot="welcome-section_3_0"
-    >
-        <div class='section_content'>
-            <div class='hasAnimation section_content_item_0'>
-                <div class='section_content_header'>
-                    <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>Техническое оборудование</p>
-                    <p class='section_content_header_p_right'></p>
-                </div>
-                <div class='section_content_body'>
-                    <p class='section_content_body_p'>
-                        Если тебе необходимо установить дополнительное ПО, запросить технику или возникли технические
-                        трудности, пиши на help@digitalms.ru Коллеги постараются оперативно решить вопрос для
-                        продолжения комфортной работы
-                    </p>
-                </div>
-            </div>
-            <div class='section_content_item_img_3_2'></div>
         </div>
     </welcome-section>
 
