--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -197,7 +197,7 @@
 
     <welcome-section data-id="0" children slot="welcome-section-0">
         <div class='parallax'>
-            <img src='./this/img/north_tower.png'/>
+            <img src='./this/img/pg0.png'/>
         </div>
         <div class='teaser'>
             <div class='first-page'>
