--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -73,24 +73,32 @@
                 <slot name="welcome-logo"></slot>
             </div>
             <div class="arrow" data-id="top">
-                <span class="arrow_offset"></span>
-                <span class="arrow_offset"></span>
-                <span class="arrow_offset"></span>
+                <div class="arrow_container">
+                    <span class="arrow_offset"></span>
+                    <span class="arrow_offset"></span>
+                    <span class="arrow_offset"></span>
+                </div>
             </div>
             <div class="arrow" data-id="bottom">
-                <span class="arrow_offset"></span>
-                <span class="arrow_offset"></span>
-                <span class="arrow_offset"></span>
+                <div class="arrow_container">
+                    <span class="arrow_offset"></span>
+                    <span class="arrow_offset"></span>
+                    <span class="arrow_offset"></span>
+                </div>
             </div>
             <div class="arrow" data-id="left">
-                <span class="arrow_offset"></span>
-                <span class="arrow_offset"></span>
-                <span class="arrow_offset"></span>
+                <div class="arrow_container">
+                    <span class="arrow_offset"></span>
+                    <span class="arrow_offset"></span>
+                    <span class="arrow_offset"></span>
+                </div>
             </div>
             <div class="arrow" data-id="right">
-                <span class="arrow_offset"></span>
-                <span class="arrow_offset"></span>
-                <span class="arrow_offset"></span>
+                <div class="arrow_container">
+                    <span class="arrow_offset"></span>
+                    <span class="arrow_offset"></span>
+                    <span class="arrow_offset"></span>
+                </div>
             </div>
         </div>
 
