--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -463,6 +463,7 @@
             data-css-shadow="section"
             data-id="1_1"
             slot="welcome-section_1_0"
+            style="transition-delay: 4s"
     >
         <div class='section_content'>
             <div class='hasAnimation section_content_item_2'>
