--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -80,6 +80,7 @@
     </div>
 
     <fer-scroll
+            data-services-path="rules"
             data-css-shadow="arrow"
             slot="fer-scroll"
             class="index-cat"
@@ -111,6 +112,7 @@
         </div>
 
         <welcome-logo
+                data-services-path="rules"
                 slot="welcome-logo"
         >
             <div class="flex-container">
@@ -145,7 +147,8 @@
     </fer-scroll>
 
     <welcome-menu
-        data-css-shadow="rules_0_0"
+            data-services-path="rules"
+            data-css-shadow="rules_0_0"
             slot="welcome-menu"
     >
         <div class="container">
@@ -161,6 +164,7 @@
             </div>
         </div>
         <fer-button
+                data-services-path="rules"
                 slot="button-0"
                 data-id="0"
                 data-type="welcome-menu"
@@ -170,6 +174,7 @@
         </fer-button>
 
         <fer-button
+                data-services-path="rules"
                 slot="button-1"
                 data-id="1"
                 data-type="welcome-menu"
@@ -180,6 +185,7 @@
         </fer-button>
 
         <fer-button
+                data-services-path="rules"
                 slot="button-2"
                 data-id="2"
                 data-type="welcome-menu"
@@ -189,6 +195,7 @@
         </fer-button>
 
         <fer-button
+                data-services-path="rules"
                 slot="button-3"
                 data-id="3"
                 data-type="welcome-menu"
@@ -198,6 +205,7 @@
         </fer-button>
 
         <fer-button
+                data-services-path="rules"
                 slot="button-4"
                 data-id="4"
                 data-type="welcome-menu"
@@ -208,6 +216,7 @@
     </welcome-menu>
 
     <welcome-section
+            data-services-path="rules"
             data-id="0"
             data-css-shadow="rules_0_0"
             slot="welcome-section-0"
@@ -228,19 +237,20 @@
         </div>
 
         <div
-            data-exclusion
-            slot="welcome-menu_0_0"
+                data-exclusion
+                slot="welcome-menu_0_0"
         >
-
             <fer-hash
-                data-id="0"
-                data-hash="general"
-                data-type="rules_0_0"
-                data-css-shadow="rules_0_0"
+                    data-services-path="rules"
+                    data-id="0"
+                    data-hash="general"
+                    data-type="rules_0_0"
+                    data-css-shadow="rules_0_0"
             >
                 <p>Основное</p>
             </fer-hash>
             <fer-hash
+                    data-services-path="rules"
                     data-id="1"
                     data-type="rules_0_0"
                     data-hash="verification"
@@ -249,6 +259,7 @@
                 <p>Верификация</p>
             </fer-hash>
             <fer-hash
+                    data-services-path="rules"
                     data-id="2"
                     data-hash="execution"
                     data-type="rules_0_0"
@@ -258,8 +269,9 @@
             </fer-hash>
         </div>
         <fer-form
-            data-css-shadow="rules_0_0"
-            slot="fer-form_input"
+                data-services-path="rules"
+                data-css-shadow="rules_0_0"
+                slot="fer-form_input"
         >
             <div class="container">
                 <div class="input">
@@ -276,6 +288,7 @@
                 </div>
             </div>
             <fer-button
+                    data-services-path="rules"
                     data-type="fer-form"
                     data-id="cancel"
                     slot="fer-form__cancel"
@@ -283,6 +296,7 @@
                 <p>Отмена</p>
             </fer-button>
             <fer-button
+                    data-services-path="rules"
                     data-type="fer-form"
                     data-id="save"
                     slot="fer-form__save"
@@ -291,6 +305,7 @@
             </fer-button>
         </fer-form>
         <fer-table
+                data-services-path="rules"
                 data-template="table_0_0"
                 slot="fer-table_0_0"
         >
@@ -317,6 +332,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="rules"
             data-id="1"
             data-css-shadow="rules_0_0"
             slot="welcome-section-1"
@@ -331,6 +347,7 @@
         </div>
 
         <fer-table
+                data-services-path="rules"
                 data-template="table_1_0"
                 slot="fer-table_1_0"
         >
@@ -359,9 +376,10 @@
     </welcome-section>
 
     <welcome-section
-        data-id="2"
-        data-css-shadow="rules_0_0"
-        slot="welcome-section-2"
+            data-services-path="rules"
+            data-id="2"
+            data-css-shadow="rules_0_0"
+            slot="welcome-section-2"
     >
         <div class='images'></div>
         <div class='body'>
@@ -373,6 +391,7 @@
         </div>
 
         <fer-table
+                data-services-path="rules"
                 data-template="table_2_0"
                 slot="fer-table_2_0"
         >
@@ -405,6 +424,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="rules"
             data-id="3"
             data-css-shadow="rules_0_0"
             slot="welcome-section-3"
@@ -419,8 +439,9 @@
         </div>
 
         <fer-table
-            data-template="table_3_0"
-            slot="fer-table_3_0"
+                data-services-path="rules"
+                data-template="table_3_0"
+                slot="fer-table_3_0"
         >
             <div class="auction-data">
                 <div class="auction-data__table">
@@ -443,6 +464,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="rules"
             data-id="4"
             slot="welcome-section-4"
             data-css-shadow="rules_0_0"
@@ -457,6 +479,7 @@
         </div>
 
         <fer-table
+                data-services-path="rules"
                 data-template="table_3_0"
                 slot="fer-table_4_0"
         >
@@ -480,7 +503,7 @@
         </fer-table>
     </welcome-section>
 
-    <welcome-section data-id="5" slot="welcome-section-5">
+    <welcome-section  data-services-path="rules" data-id="5" slot="welcome-section-5">
         <div class='parallax image-background'>
             <img class="image-scale" src='./this/img/pg5.png'/>
         </div>
@@ -516,7 +539,7 @@
             </div>
         </div>
 
-        <welcome-feedback slot="welcome-feedback">
+        <welcome-feedback  data-services-path="rules" slot="welcome-feedback">
             <div class="container">
                 <div class="container-name">
                     <label for="name">Имя</label>
@@ -534,6 +557,7 @@
             </div>
 
             <fer-button
+                    data-services-path="rules"
                     data-type="fer-form"
                     data-id="cancel"
                     slot="fer-form__cancel"
@@ -542,6 +566,7 @@
                 <p class="cancel">Отмена</p>
             </fer-button>
             <fer-button
+                    data-services-path="rules"
                     data-type="fer-form"
                     data-id="save"
                     slot="fer-form__save"
@@ -554,6 +579,7 @@
 
 
     <welcome-section
+            data-services-path="rules"
             data-css-shadow="section"
             data-id="1_0"
             slot="welcome-section_1_0"
@@ -640,6 +666,7 @@
 
 
     <welcome-section
+            data-services-path="rules"
             data-css-shadow="section"
             data-id="1_1"
             slot="welcome-section_1_0"
@@ -795,6 +822,7 @@
 
 
     <welcome-section
+            data-services-path="rules"
             data-css-shadow="section"
             data-id="1_2"
             slot="welcome-section_1_0"
@@ -1074,6 +1102,7 @@
     <!--    </welcome-section>-->
 
     <welcome-section
+            data-services-path="rules"
             data-css-shadow="section"
             data-id="2_0"
             slot="welcome-section_2_0"
@@ -1121,6 +1150,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="rules"
             data-css-shadow="section"
             data-id="2_1"
             slot="welcome-section_2_0"
@@ -1165,6 +1195,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="rules"
             data-css-shadow="section"
             data-id="2_2"
             slot="welcome-section_2_0"
@@ -1214,6 +1245,7 @@
 
 
     <welcome-section
+            data-services-path="rules"
             data-css-shadow="section"
             data-id="3_0"
             slot="welcome-section_3_0"
@@ -1239,6 +1271,7 @@
 
 
     <welcome-section
+            data-services-path="rules"
             data-css-shadow="section"
             data-id="3_1"
             slot="welcome-section_3_0"
@@ -1263,6 +1296,7 @@
 
 
     <welcome-section
+            data-services-path="rules"
             data-css-shadow="section"
             data-id="3_2"
             slot="welcome-section_3_0"
