--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -56,7 +56,10 @@
         </div>
     </div>
 
-    <welcome-header slot="welcome-header">
+    <welcome-header
+            data-services-path="welcomebook"
+            slot="welcome-header"
+    >
         <img class='welcome__logo' src="./this/icons/logo.svg"/>
         <div class="welcome__wrapper">
             <div class="welcome__link"></div>
@@ -64,6 +67,7 @@
     </welcome-header>
 
     <fer-scroll
+            data-services-path="welcomebook"
             data-css-shadow="arrow"
             slot="fer-scroll"
             class="index-cat"
@@ -103,7 +107,8 @@
         </div>
 
         <welcome-logo
-            slot="welcome-logo"
+                data-services-path="welcomebook"
+                slot="welcome-logo"
         >
             <div class="flex-container">
                 <div class="welcome-logo">
@@ -136,7 +141,10 @@
         </welcome-logo>
     </fer-scroll>
 
-    <welcome-menu slot="welcome-menu">
+    <welcome-menu
+            data-services-path="welcomebook"
+            slot="welcome-menu"
+    >
         <div class="container">
             <div class="slider">
                 <div class="square"></div>
@@ -150,6 +158,7 @@
             </div>
         </div>
         <fer-button
+                data-services-path="welcomebook"
                 slot="button-0"
                 data-id="0__0_0"
                 data-type="welcome-menu"
@@ -158,6 +167,7 @@
             <p>Старт</p>
         </fer-button>
         <fer-button
+                data-services-path="welcomebook"
                 slot="button-0"
                 data-id="0__0_1"
                 data-type="welcome-menu"
@@ -166,6 +176,7 @@
             <p>Приветствие</p>
         </fer-button>
         <fer-button
+                data-services-path="welcomebook"
                 slot="button-1"
                 data-id="1"
                 data-type="welcome-menu"
@@ -176,6 +187,7 @@
         </fer-button>
 
         <fer-button
+                data-services-path="welcomebook"
                 slot="button-2"
                 data-id="2"
                 data-type="welcome-menu"
@@ -185,6 +197,7 @@
         </fer-button>
 
         <fer-button
+                data-services-path="welcomebook"
                 slot="button-3"
                 data-id="3"
                 data-type="welcome-menu"
@@ -194,6 +207,7 @@
         </fer-button>
 
         <fer-button
+                data-services-path="welcomebook"
                 slot="button-4"
                 data-id="4"
                 data-type="welcome-menu"
@@ -203,7 +217,12 @@
         </fer-button>
     </welcome-menu>
 
-    <welcome-section data-id="0" children slot="welcome-section-0">
+    <welcome-section
+            data-services-path="welcomebook"
+            data-id="0"
+            children
+            slot="welcome-section-0"
+    >
         <div class='parallax'>
             <img src='./this/img/pg0.png'/>
         </div>
@@ -222,10 +241,13 @@
                                 Приветствуем тебя в команде Цифромед!
                             </p>
                             <p class="description-text">
-                                Для того, чтобы ты смог быстрее освоиться в нашей Компании и уверенно ориентироваться в новой обстановке, мы подготовили этот Welcome Book.
+                                Для того, чтобы ты смог быстрее освоиться в нашей Компании и уверенно ориентироваться в
+                                новой обстановке, мы подготовили этот Welcome Book.
                             </p>
                             <p class="description-text">
-                                В нем содержится ключевая информация, необходимая в первые месяцы работы: о Цифромеде, нашей структуре, особенностях организации работы, корпоративных возможностях и полезных контактах.
+                                В нем содержится ключевая информация, необходимая в первые месяцы работы: о Цифромеде,
+                                нашей структуре, особенностях организации работы, корпоративных возможностях и полезных
+                                контактах.
                             </p>
                             <p class="description-text margin--bottom">
                                 Уверены, что после прочтения, ты получишь ответы на многие вопросы!
@@ -281,7 +303,11 @@
         </div>
     </welcome-section>
 
-    <welcome-section data-id="1" slot="welcome-section-1">
+    <welcome-section
+            data-services-path="welcomebook"
+            data-id="1"
+            slot="welcome-section-1"
+    >
         <div class='parallax image-background'>
             <img class="image-scale" src='./this/img/pg2.png'/>
         </div>
@@ -307,7 +333,7 @@
         </div>
     </welcome-section>
 
-    <welcome-section data-id="2" slot="welcome-section-2">
+    <welcome-section   data-services-path="welcomebook" data-id="2" slot="welcome-section-2">
         <div class='parallax image-background'>
             <img class="image-scale" src='./this/img/pg3.png'/>
         </div>
@@ -328,7 +354,7 @@
         </div>
     </welcome-section>
 
-    <welcome-section data-id="3" slot="welcome-section-3">
+    <welcome-section  data-services-path="welcomebook" data-id="3" slot="welcome-section-3">
         <div class='parallax image-background'>
             <img class="image-scale" src='./this/img/pg4.png'/>
         </div>
@@ -348,7 +374,7 @@
         </div>
     </welcome-section>
 
-    <welcome-section data-id="4" slot="welcome-section-4">
+    <welcome-section data-services-path="welcomebook" data-id="4" slot="welcome-section-4">
         <div class='parallax image-background'>
             <img class="image-scale" src='./this/img/pg5.png'/>
         </div>
@@ -384,7 +410,7 @@
             </div>
         </div>
 
-        <welcome-feedback slot="welcome-feedback">
+        <welcome-feedback data-services-path="welcomebook" slot="welcome-feedback">
             <div class="container">
                 <div class="container-name">
                     <label for="name">Имя</label>
@@ -402,6 +428,7 @@
             </div>
 
             <fer-button
+                    data-services-path="welcomebook"
                     data-type="fer-form"
                     data-id="cancel"
                     slot="fer-form__cancel"
@@ -410,6 +437,7 @@
                 <p class="cancel">Отмена</p>
             </fer-button>
             <fer-button
+                    data-services-path="welcomebook"
                     data-type="fer-form"
                     data-id="save"
                     slot="fer-form__save"
@@ -422,6 +450,7 @@
 
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="1_0"
             slot="welcome-section_1_0"
@@ -460,6 +489,7 @@
 
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="1_1"
             slot="welcome-section_1_0"
@@ -538,6 +568,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="1_2"
             slot="welcome-section_1_0"
@@ -560,6 +591,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="1_3"
             slot="welcome-section_1_0"
@@ -644,6 +676,7 @@
 
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="1_4"
             slot="welcome-section_1_0"
@@ -666,6 +699,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="1_5"
             slot="welcome-section_1_0"
@@ -688,6 +722,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="1_6"
             slot="welcome-section_1_0"
@@ -710,6 +745,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="1_7"
             slot="welcome-section_1_0"
@@ -733,6 +769,7 @@
 
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="2_0"
             slot="welcome-section_2_0"
@@ -755,6 +792,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="2_1"
             slot="welcome-section_2_0"
@@ -777,6 +815,7 @@
     </welcome-section>
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="2_2"
             slot="welcome-section_2_0"
@@ -800,6 +839,7 @@
 
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="3_0"
             slot="welcome-section_3_0"
@@ -823,6 +863,7 @@
 
 
     <welcome-section
+            data-services-path="welcomebook"
             data-css-shadow="section"
             data-id="3_1"
             slot="welcome-section_3_0"
