--- a/docs/component/api-substrate/views/css/index.shadow.css
+++ b/docs/component/api-substrate/views/css/index.shadow.css
@@ -56,6 +56,8 @@ p {
 
 .grid__main {
     display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 18rem 1fr 6rem;
     flex-direction: column;
     flex-grow: 1;
     height: 100%;
