--- a/docs/component/api-button/views/css/rules.shadow.css
+++ b/docs/component/api-button/views/css/rules.shadow.css
@@ -53,3 +53,7 @@
     filter: invert(36%) sepia(5%) saturate(4314%) hue-rotate(169deg) brightness(87%) contrast(78%);
     transition: all 0.3s ease;
 }
+
+.active path  {
+    fill: #435F7B;
+}
