--- a/docs/component/api-footer/views/css/index.shadow.css
+++ b/docs/component/api-footer/views/css/index.shadow.css
@@ -1,16 +1,17 @@
+:host([slot="footer_substrate"]){
+
+}
+
 .footer_content {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.footer_content p {
+p, a {
     margin: 0;
     padding: 0;
-}
-
-a {
-    font-size: 1vw;
+    font-size: 2rem;
     color: rgba(var(--colorT), var(--colorT), var(--colorT), 0.5);
     text-decoration: none;
 }
