--- a/docs/component/api-footer/views/css/index.shadow.css
+++ b/docs/component/api-footer/views/css/index.shadow.css
@@ -9,9 +9,10 @@
 }
 
 p, a {
-    margin: 0;
-    padding: 0;
-    font-size: 2rem;
+    margin: 0px;
+    padding: 0px;
+    font-size: 2.4rem;
     color: rgba(var(--colorT), var(--colorT), var(--colorT), 0.5);
     text-decoration: none;
+    transform: translateX(17rem);
 }
