--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -476,24 +476,60 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p data-delay="1800" class='section_content_body_p  has-animation animation-rtl'>
-                        Наша компания разделена на Бизнес-единицы, функциональные подразделения, которые полностью
-                        отвечают
-                        за реализацию проектов в своей зоне ответственности: Федеральный проектный офис, Региональный
-                        проектный офис, Ведомственный проектный офис, Дирекция управления данными, в реализации их задач
-                        помогают Техническая и Операционная дирекция, и, конечно Бэк-офис.
-                    </p>
-                    <p data-delay="1200" class='section_content_body_p has-animation animation-ltr'>
-                        Также в структуре Кластера есть несколько продуктовых компаний (мы их называем ДЗО – дочернее
-                        зависимое общество).
-                    </p>
-                    <p data-delay="2000" class='section_content_body_p has-animation animation-rtl'>
-                        Информация о продуктах ДЗО будет в следующем разделе.
-                    </p>
-                    <p data-delay="1000" class='section_content_body_p has-animation animation-ltr'>
-                        Подробно со структурой компании и топ-менеджерами ты можешь познакомиться на корпоративном
-                        портале.
-                    </p>
+<!--                    <p class='text has-animation'>-->
+<!--                        Компания была образована в 2019 году как центр компетенций цифрового здравоохранения. Сегодня Цифромед является головной компанией-->
+<!--                    </p>-->
+<!--                    <span class="bold">Кластера «Медицина» ПАО Ростелеком.</span>-->
+<!--                    <p class='section_content_body_p has-animation animation-ltr'>-->
+<!--                        Наша компания разделена-->
+<!--                    </p>-->
+<!--                    <span class="bold">на Бизнес-единицы</span>-->
+<!--                    <p class='text has-animation'>-->
+<!--                        - функциональные подразделения, отвечающие за реализацию проектов в своих зонах ответственности.-->
+<!--                    </p>-->
+                    <div class="content__welcome-section_1_0">
+                        <div class="item__welcome-section_1_0">
+                            <p>
+                                Федеральный
+                                проектный офис
+                            </p>
+                        </div>
+                        <div class="item__welcome-section_1_0">
+                            <p>
+                                Региональный
+                                проектный офис
+                            </p>
+                        </div>
+                        <div class="item__welcome-section_1_0">
+                            <p>
+                                Ведомственный
+                                проектный офис
+                            </p>
+                        </div>
+                        <div class="item__welcome-section_1_0">
+                            <p>
+                                Дирекция
+                                управления данными
+                            </p>
+                        </div>
+                        <div class="item__welcome-section_1_0">
+                            <p>
+                                Техническая
+                                дирекция
+                            </p>
+                        </div>
+                        <div class="item__welcome-section_1_0">
+                            <p>
+                                Операционная
+                                дирекция
+                            </p>
+                        </div>
+                        <div class="item__welcome-section_1_0">
+                            <p>
+                                Бэк-офис
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class='section_content_item_img_1_0'></div>
